[ADD] BioPortal repository, and fixes
