# repositories/bioportal/models/meta_concept.py
@@ -1,7 +1,7 @@
 # coding: utf-8
 
 """
-    EBI OLS API
+    NCBO BioPortal API
 
     No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
 
@@ -48,7 +48,7 @@ class MetaConcept(object):
         'skosalt_label': 'skos:altLabel'
     }
 
-    def __init__(self, id='iri', rdfsis_defined_by='ontology_iri', skospref_label='label', skosdefinition='description', skosnote='short_form', skosalt_label='annotation.alternative_term'):
+    def __init__(self, id='id', rdfsis_defined_by='links.ontology', skospref_label='pref_label', skosdefinition='definition', skosnote='', skosalt_label='synonym'):
         """
         MetaConcept - a model defined in Swagger
         """
